@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20020705
+MANIFEST for ded, version t20021221
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
